2009-01-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/main.c, doc/geany.txt, doc/geany.html, doc/geany.1.in:
   Rename command line option --debug to --verbose.
   Change short form of --version from -v to -V.
 * geany.glade, src/dialogs.c, src/interface.c, src/printing.c,
   src/search.c, src/vte.c:
   Remove tooltips from menu items.
   Don't use full stops in tooltips for short sentences.
 * doc/geany.txt, doc/geany.html:
   Add documentation for some missing options.


2009-01-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/global.tags, data/latex.tags, data/pascal.tags, data/php.tags,
   data/python.tags, doc/geany.html, doc/geany.txt,
   scripts/create_php_tags.php, scripts/create_py_tags.py,
   tagmanager/include/tm_tag.h, tagmanager/tm_project.c,
   tagmanager/tm_tag.c, tagmanager/tm_workspace.c:
   Add a format specification in global tags files and implement
   an additional fallback if the specification is missing.
   Adjust code and scripts which generate global tags files to
   add the new format specification.
   Update global tags files.
   Add documentation for the two supported global tags files formats.
 * src/msgwindow.c:
   Strip the compiler error messages to fix possibly broken message
   parsing.
 * win32-config.h, src/makefile.win32:
   Fix Windows build: don't use GIO.
   Link against GIO anyways just to be safe with GTK 2.14.
 * geany.glade, src/highlighting.c, src/interface.c, src/keyfile.c,
   src/plugindata.h, src/ui_utils.h:
   Add GUI pref to invert all colours for syntax highlighting.


2009-01-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * data/filetypes.vala:
   Add default build commands (other sections are commented out and
   untested).


2009-01-11  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.in, wscript, src/Makefile.am, src/utils.c:
   Fix build with GTK 2.12 by adding GIO compile and linker flags
   (closes #2498580).