@@ -1,3 +1,9 @@
+2009-01-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/project.c, src/keyfile.c:
+   Prevent type-punned pointer warnings with gcc 4.1.
+
+
 2009-01-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/main.c, doc/geany.txt, doc/geany.html, doc/geany.1.in:
